--- a/admin/monster-html/css/style.css
+++ b/admin/monster-html/css/style.css
@@ -8591,7 +8591,7 @@ html body .display-7 {
 Background colors
 *******************/
 html body .bg-megna {
-  background-color: #4fc3f7; }
+  background-color: #06557a; }
 
 html body .bg-theme {
   background-color: #2962FF; }
